@@ -3,3 +3,8 @@
 (require 'init-basic nil t)
 (require 'init-site nil t)
 (require 'init-misc nil t)
+
+;; (add-to-list 'load-path "e:/common/note")
+;; (require 'init-note nil t)
+
+;; (load "e:/common/dotemacs/sample-proj.el" t)
